resolvido o problema do header que agora está transparente e absorvendo a imagem de fundo e concluída a estilização do mesmo com a inserção da fonte correta e ajustes de posição. A página sobre nós foi ajustada também com as posições e medidas informadas no figma, agora só falta receber os textos corretos.

--- a/Website/src/components/Header/header.css
+++ b/Website/src/components/Header/header.css
@@ -4,13 +4,34 @@
     margin-top: 2vh;
     background: transparent;
     height: fit-content;
+    /* background-color: green; */
+    align-items: center;
+    padding-top: 5vh;
+    position: absolute;
+    width: 100%;
 }
 
 .menu {
     display: flex;
 }
 
+.logo {
+    margin-left: 2vw;
+}
+
 ul {
     display: flex;
-    gap: 1vw;
+    gap: 2vw;
+    margin-right: 2vw;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+}
+
+a:hover {
+    text-decoration: none;
+    color: white;
 }
