ajustando o header de acordo com o protótipo, preenchimento das informações que faltavam na página sobre mim e finalização da estilização da página

--- a/Website/src/components/Header/header.css
+++ b/Website/src/components/Header/header.css
@@ -6,9 +6,10 @@
     height: fit-content;
     /* background-color: green; */
     align-items: center;
-    padding-top: 5vh;
+    padding-top: 3vh;
     position: absolute;
     width: 100%;
+    z-index: 100;
 }
 
 .menu {
