alinhamento do botão cadastrar newsletter

--- a/Website/src/components/Footer/styles.css
+++ b/Website/src/components/Footer/styles.css
@@ -11,12 +11,11 @@
     vertical-align: auto;
 }
 
-
-
 .footer{
     background-color: rgb(1, 51, 1);
     padding: 70px 0;
     color: white;
+    width: 100%;
 }
 
 .copy {
@@ -36,4 +35,10 @@ ul {
 .info > ul{
     display: flex;
     flex-direction: column;
+}
+
+@media (max-width: 600px) {
+    .body {
+        width: 100%;
+    }
 }
