--- a/Website/src/components/Newsletter/newsletter.css
+++ b/Website/src/components/Newsletter/newsletter.css
@@ -1,17 +1,19 @@
 .newsletter {
-    width: 100%;
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 50px 8%;    
+    padding: 50px 8%;
 }
 
 .newsletter form {
-    width: 100%;
     display: flex;
     margin-top: 10px;
     flex-direction: column;
-    text-align: left;
+    align-items: center;
+}
+
+.newsletter input {
+    outline: none;
 }
 
 h3 {
@@ -20,7 +22,7 @@ h3 {
 }
 
 .newsletter form input {
-    width: 100%;
+    width: 50%;
     border-radius: 8px;
     background-color: rgb(238, 237, 237);
     border: 1px solid #fff ;
