--- a/Website/src/pages/Sobre/sobre.css
+++ b/Website/src/pages/Sobre/sobre.css
@@ -1,12 +1,12 @@
 
 .body {
     display: block;   
-    background-image: url(../../assets/image/Group142.png); 
+    /* background-image: url(../../assets/image/Group142.png);  */
     background-repeat: no-repeat;
 }
 
 .image {
-    /* background-image: url(../../assets/image/Group\ 142.png); */
+    background-image: url(../../assets/image/Group142.png);
     height: 500px;
     width: 1440px;
 }
@@ -78,4 +78,44 @@
 
 .card3 h2 {
     color: #924D0D;
+}
+
+@media only screen and (max-width: 690px) {
+
+    .card1 {
+        height: fit-content;
+        margin-left: 11vw;
+    }
+
+    .card2 {
+        margin-bottom: 15vh;
+        margin-left: 9vw;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+
+    .card1 {
+        height: fit-content;
+        margin-left: 11vw;
+    }
+
+    .card2 {
+        margin-bottom: 15vh;
+        margin-left: 2vw;
+        margin-right: 2vw;
+        display: block;
+        width: fit-content;
+        height: fit-content;
+        
+    }
+
+    .card3 {
+        width: fit-content;
+        gap: 1vw;
+        width: fit-content;
+        height: fit-content;
+        margin-left: 2vw;
+        margin-right: 2vw;
+    }
 }
