--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -13,7 +13,7 @@
 
 .footer{
     background-color: #2f5435;
-    padding: 70px 0;
+    padding: 70px 0px 20px 0px;
     color: white;
     width: 100%;
 }
